try to generate more excel compliant files, tdf#41722

§18.3.1.10 says for the operator attribute: "The operator in a "cell
value is" conditional formatting rule. This attribute is ignored if
type is not equal to cellIs"

but checking §18.18.15 there are at least 4 attribute values that are
not related to cellIs. I have added them now but need to test that this
really helps.

Change-Id: Id15efc7e0148b4e3b54404d1ffd911adc56b11ec